ticker: renamed from slider

--- a/ticker.html
+++ b/ticker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="slider.js"></script>
+<script type="text/javascript" src="ticker.js"></script>
 <style>
 .wrapper { overflow: hidden; }
 span { padding: 0 1ex }
@@ -15,9 +15,9 @@ span { padding: 0 1ex }
 <div id="css3"><span> /-</span><span>zero</span><span>one</span><span>two</span><span>three</span><span>four</span><span>five</span><span>six</span><span>seven</span><span>eight</span><span>nine</span><span>ten</span><span>eleven</span><span>twelve</span><span>thirteen</span><span>fourteen</span><span>fifteen</span><span>sixteen</span><span>seventeen</span><span>eighteen</span><span>nineteen</span><span>twenty</span></div>
 </div>
 <script>
-var scroll=new scrollSlider();
+var scroll=new scrollTicker();
 scroll.init('scroll');
-var css3=new css3Slider();
+var css3=new css3Ticker();
 css3.init('css3');
 </script>
 </body>
